fixed 1 item aligned carousel style

--- a/projects/app1/src/app/sharedComponents/resume-document/resume-document.component.scss
+++ b/projects/app1/src/app/sharedComponents/resume-document/resume-document.component.scss
@@ -6,7 +6,8 @@
   border-radius: 0.4rem;
   min-height: 10rem;
   background: white;
-  padding: .5rem;
+  // padding: .5rem;
+  padding: 1.5rem;
   box-shadow: 0 1px 6px 0 rgb(32 33 36 / 30%);
   border: 1px solid rgba(138, 138, 138, .3);
   margin-bottom:2rem;
